add opencast-security-cas to presentation dist

--- a/assemblies/dist-presentation/pom.xml
+++ b/assemblies/dist-presentation/pom.xml
@@ -115,6 +115,7 @@
             <feature>eclipselink</feature>
             <!-- Opencast features -->
             <feature>opencast-presentation</feature>
+            <feature>opencast-security-cas</feature>
           </bootFeatures>
         </configuration>
       </plugin>
